--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.0.4",
+    "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "bootstrap": "^4.4.1",
     "customize-cra": "^0.9.1",
