--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
+    "react-code-blocks": "0.0.7",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
