--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-code-blocks": "0.0.7",
+    "react-d3-tree": "^1.16.1",
     "react-dom": "^16.13.1",
     "react-gauge-chart": "^0.2.5",
     "react-router-dom": "^5.1.2",
