--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "babel-plugin-import": "^1.13.0",
     "bootstrap": "^4.4.1",
     "customize-cra": "^0.9.1",
+    "html2canvas": "^1.0.0-rc.5",
+    "html2pdf.js": "^0.9.2",
+    "jspdf": "^1.5.3",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "node-sass": "^4.13.1",
