--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.0.4",
+    "apexcharts": "^3.17.1",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "customize-cra": "^0.9.1",
     "html2canvas": "^1.0.0-rc.5",
     "html2pdf.js": "^0.9.2",
@@ -18,7 +21,9 @@
     "less-loader": "^5.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.6",
     "react-app-rewired": "^2.1.5",
+    "react-chartjs-2": "^2.9.0",
     "react-code-blocks": "0.0.7",
     "react-d3-tree": "^1.16.1",
     "react-dom": "^16.13.1",
