--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-code-blocks": "0.0.7",
     "react-d3-tree": "^1.16.1",
     "react-dom": "^16.13.1",
+    "react-ellipsis-text": "^1.2.1",
     "react-gauge-chart": "^0.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
