Update package to include redis

--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "gitignore-parser": "0.0.2",
     "language-map": "^1.4.0",
     "mkdirp": "^1.0.3",
+    "redis": "^3.0.2",
     "simple-git": "^1.132.0"
   }
 }
